[workspace]
members = ["day1", "day10", "day11", "day12", "day13", "day14", "day15", "day16", "day2", "day3", "day4", "day5", "day6", "day7", "day8", "day9"]

[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.2"

[profile.release-with-debug]
inherits = "release"
debug = true
